--- a/index.html
+++ b/index.html
@@ -30,6 +30,11 @@
 					<td>999</td>
 					<td>Third entry</td>
 				</tr>
+				<tr>
+					<td>2025-03-11</td>
+					<td>123</td>
+					<td>Fourth entry</td>
+				</tr>
 			</tbody>
 		</table>
 	</body>
