--- a/index.html
+++ b/index.html
@@ -35,6 +35,11 @@
 					<td>123</td>
 					<td>Fourth entry</td>
 				</tr>
+				<tr>
+					<td>2025-03-12</td>
+					<td>456</td>
+					<td>Fifth entry</td>
+				</tr>
 			</tbody>
 		</table>
 	</body>
