--- a/index.html
+++ b/index.html
@@ -40,6 +40,11 @@
 					<td>456</td>
 					<td>Fifth entry</td>
 				</tr>
+				<tr>
+					<td>2001-01-01</td>
+					<td>999</td>
+					<td>Sixth entry</td>
+				</tr>
 			</tbody>
 		</table>
 	</body>
