--- a/index.html
+++ b/index.html
@@ -45,6 +45,11 @@
 					<td>999</td>
 					<td>Sixth entry</td>
 				</tr>
+				<tr>
+					<td>2001-01-01</td>
+					<td>888</td>
+					<td>Seventh entry</td>
+				</tr>
 			</tbody>
 		</table>
 	</body>
