--- a/index.html
+++ b/index.html
@@ -50,6 +50,11 @@
 					<td>888</td>
 					<td>Seventh entry</td>
 				</tr>
+				<tr>
+					<td>2001-01-01</td>
+					<td>777</td>
+					<td>Eighth entry</td>
+				</tr>
 			</tbody>
 		</table>
 	</body>
