--- a/index.html
+++ b/index.html
@@ -55,6 +55,11 @@
 					<td>777</td>
 					<td>Eighth entry</td>
 				</tr>
+				<tr>
+					<td>2001-01-01</td>
+					<td>10</td>
+					<td>Greater Than Test 1</td>
+				</tr>
 			</tbody>
 		</table>
 	</body>
