--- a/index.html
+++ b/index.html
@@ -60,6 +60,11 @@
 					<td>10</td>
 					<td>Greater Than Test 1</td>
 				</tr>
+				<tr>
+					<td>2001-01-01</td>
+					<td>9</td>
+					<td>Greater Than Test 2 (No notification)</td>
+				</tr>
 			</tbody>
 		</table>
 	</body>
