--- a/index.html
+++ b/index.html
@@ -63,7 +63,12 @@
 				<tr>
 					<td>2001-01-01</td>
 					<td>9</td>
-					<td>Greater Than Test 2 (No notification)</td>
+					<td>Greater Than Test 2 (false, number)</td>
+				</tr>
+				<tr>
+					<td>2001-01-01</td>
+					<td>10</td>
+					<td>Greater Than Test 3 (false, other type)</td>
 				</tr>
 			</tbody>
 		</table>
