--- a/index.html
+++ b/index.html
@@ -70,6 +70,11 @@
 					<td>10</td>
 					<td>Greater Than Test 3 (false, other type)</td>
 				</tr>
+				<tr>
+					<td>2001-01-01</td>
+					<td>10</td>
+					<td>Greater Than Test 4 (false, NaN)</td>
+				</tr>
 			</tbody>
 		</table>
 	</body>
