--- a/index.html
+++ b/index.html
@@ -75,6 +75,11 @@
 					<td>10</td>
 					<td>Greater Than Test 4 (false, NaN)</td>
 				</tr>
+				<tr>
+					<td>2001-01-01</td>
+					<td>11</td>
+					<td>Greater Than Test 5 (false, NaN)</td>
+				</tr>
 			</tbody>
 		</table>
 	</body>
