--- a/index.html
+++ b/index.html
@@ -80,6 +80,11 @@
 					<td>11</td>
 					<td>Greater Than Test 5 (false, NaN)</td>
 				</tr>
+				<tr>
+					<td>2001-01-01</td>
+					<td>12</td>
+					<td>Greater Than Test 6 (false, NaN)</td>
+				</tr>
 			</tbody>
 		</table>
 	</body>
