--- a/index.html
+++ b/index.html
@@ -85,6 +85,11 @@
 					<td>12</td>
 					<td>Greater Than Test 6 (false, NaN)</td>
 				</tr>
+				<tr>
+					<td>2001-01-01</td>
+					<td>13</td>
+					<td>Greater Than Test 7 (true)</td>
+				</tr>
 			</tbody>
 		</table>
 	</body>
