--- a/index.html
+++ b/index.html
@@ -90,6 +90,11 @@
 					<td>13</td>
 					<td>Greater Than Test 7 (true)</td>
 				</tr>
+				<tr>
+					<td>2001-01-01</td>
+					<td>16</td>
+					<td>Greater Than Test A (true)</td>
+				</tr>
 			</tbody>
 		</table>
 	</body>
