--- a/index.html
+++ b/index.html
@@ -95,6 +95,11 @@
 					<td>16</td>
 					<td>Greater Than Test A (true)</td>
 				</tr>
+				<tr>
+					<td>2001-01-01</td>
+					<td>15</td>
+					<td>Greater Than Test B (false)</td>
+				</tr>
 			</tbody>
 		</table>
 	</body>
