--- a/index.html
+++ b/index.html
@@ -105,6 +105,11 @@
 					<td>16</td>
 					<td>Greater Than Test B (false, NaN)</td>
 				</tr>
+				<tr>
+					<td>2001-01-01</td>
+					<td>9</td>
+					<td>Less Than Test A (true)</td>
+				</tr>
 			</tbody>
 		</table>
 	</body>
