--- a/index.html
+++ b/index.html
@@ -110,6 +110,11 @@
 					<td>9</td>
 					<td>Less Than Test A (true)</td>
 				</tr>
+				<tr>
+					<td>2001-01-01</td>
+					<td>8</td>
+					<td>Less Than Test A2 (true)</td>
+				</tr>
 			</tbody>
 		</table>
 	</body>
