--- a/index.html
+++ b/index.html
@@ -115,6 +115,16 @@
 					<td>8</td>
 					<td>Less Than Test A2 (true)</td>
 				</tr>
+				<tr>
+					<td>2001-01-01</td>
+					<td>8</td>
+					<td>Less Than Test A2 (true)</td>
+				</tr>
+				<tr>
+					<td>2001-01-01</td>
+					<td>25</td>
+					<td>GREATER THAN Test A2 (true)</td>
+				</tr>
 			</tbody>
 		</table>
 	</body>
