--- a/index.html
+++ b/index.html
@@ -125,6 +125,11 @@
 					<td>25</td>
 					<td>GREATER THAN Test A2 (true)</td>
 				</tr>
+				<tr>
+					<td>2001-01-01</td>
+					<td>26</td>
+					<td>GREATER THAN Test 2 (true)</td>
+				</tr>
 			</tbody>
 		</table>
 	</body>
