--- a/index.html
+++ b/index.html
@@ -140,6 +140,11 @@
 					<td>51</td>
 					<td>GREATER THAN ANY TEST 2 (true)</td>
 				</tr>
+				<tr>
+					<td>2001-01-01</td>
+					<td>51</td>
+					<td>GREATER THAN ANY TEST 3 (false)</td>
+				</tr>
 			</tbody>
 		</table>
 	</body>
