--- a/index.html
+++ b/index.html
@@ -155,6 +155,11 @@
 					<td>51</td>
 					<td>GREATER THAN ANY TEST 5 (false)</td>
 				</tr>
+				<tr>
+					<td>2001-01-01</td>
+					<td>51</td>
+					<td>GREATER THAN ANY TEST 6 (false)</td>
+				</tr>
 			</tbody>
 		</table>
 	</body>
