--- a/index.html
+++ b/index.html
@@ -170,6 +170,11 @@
 					<td>51</td>
 					<td>GREATER THAN ALL TEST 1 (false)</td>
 				</tr>
+				<tr>
+					<td>2001-01-01</td>
+					<td>51</td>
+					<td>GREATER THAN ANY TEST 1 (true)</td>
+				</tr>
 			</tbody>
 		</table>
 	</body>
