--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 					<th>Date</th>
 					<th>Number</th>
 					<th>Text</th>
+					<th>Quantity</th>
 				</tr>
 			</thead>
 			<tbody>
@@ -19,171 +20,205 @@
 					<td>2025-01-15</td>
 					<td>42</td>
 					<td>First entry</td>
+					<td>73</td>
 				</tr>
 				<tr>
 					<td>2025-02-20</td>
 					<td>137</td>
 					<td>Second entry</td>
+					<td>28</td>
 				</tr>
 				<tr>
 					<td>2025-03-10</td>
 					<td>999</td>
 					<td>Third entry</td>
+					<td>91</td>
 				</tr>
 				<tr>
 					<td>2025-03-11</td>
 					<td>123</td>
 					<td>Fourth entry</td>
+					<td>45</td>
 				</tr>
 				<tr>
 					<td>2025-03-12</td>
 					<td>456</td>
 					<td>Fifth entry</td>
+					<td>62</td>
 				</tr>
 				<tr>
 					<td>2001-01-01</td>
 					<td>999</td>
 					<td>Sixth entry</td>
+					<td>17</td>
 				</tr>
 				<tr>
 					<td>2001-01-01</td>
 					<td>888</td>
 					<td>Seventh entry</td>
+					<td>84</td>
 				</tr>
 				<tr>
 					<td>2001-01-01</td>
 					<td>777</td>
 					<td>Eighth entry</td>
+					<td>56</td>
 				</tr>
 				<tr>
 					<td>2001-01-01</td>
 					<td>10</td>
 					<td>Greater Than Test 1</td>
+					<td>39</td>
 				</tr>
 				<tr>
 					<td>2001-01-01</td>
 					<td>9</td>
 					<td>Greater Than Test 2 (false, number)</td>
+					<td>22</td>
 				</tr>
 				<tr>
 					<td>2001-01-01</td>
 					<td>10</td>
 					<td>Greater Than Test 3 (false, other type)</td>
+					<td>67</td>
 				</tr>
 				<tr>
 					<td>2001-01-01</td>
 					<td>10</td>
 					<td>Greater Than Test 4 (false, NaN)</td>
+					<td>88</td>
 				</tr>
 				<tr>
 					<td>2001-01-01</td>
 					<td>11</td>
 					<td>Greater Than Test 5 (false, NaN)</td>
+					<td>14</td>
 				</tr>
 				<tr>
 					<td>2001-01-01</td>
 					<td>12</td>
 					<td>Greater Than Test 6 (false, NaN)</td>
+					<td>53</td>
 				</tr>
 				<tr>
 					<td>2001-01-01</td>
 					<td>13</td>
 					<td>Greater Than Test 7 (true)</td>
+					<td>31</td>
 				</tr>
 				<tr>
 					<td>2001-01-01</td>
 					<td>16</td>
 					<td>Greater Than Test A (true)</td>
+					<td>76</td>
 				</tr>
 				<tr>
 					<td>2001-01-01</td>
 					<td>15</td>
 					<td>Greater Than Test B (false)</td>
+					<td>42</td>
 				</tr>
 				<tr>
 					<td>2001-01-01</td>
 					<td>16</td>
 					<td>Greater Than Test B (false, NaN)</td>
+					<td>19</td>
 				</tr>
 				<tr>
 					<td>2001-01-01</td>
 					<td>9</td>
 					<td>Less Than Test A (true)</td>
+					<td>65</td>
 				</tr>
 				<tr>
 					<td>2001-01-01</td>
 					<td>8</td>
 					<td>Less Than Test A2 (true)</td>
+					<td>94</td>
 				</tr>
 				<tr>
 					<td>2001-01-01</td>
 					<td>8</td>
 					<td>Less Than Test A2 (true)</td>
+					<td>37</td>
 				</tr>
 				<tr>
 					<td>2001-01-01</td>
 					<td>25</td>
 					<td>GREATER THAN Test A2 (true)</td>
+					<td>81</td>
 				</tr>
 				<tr>
 					<td>2001-01-01</td>
 					<td>26</td>
 					<td>GREATER THAN Test 2 (true)</td>
+					<td>48</td>
 				</tr>
 				<tr>
 					<td>2001-01-01</td>
 					<td>51</td>
 					<td>GREATER THAN ANY TEST 1 (true)</td>
+					<td>27</td>
 				</tr>
 				<tr>
 					<td>2001-01-01</td>
 					<td>51</td>
 					<td>GREATER THAN ANY TEST 2 (true)</td>
+					<td>59</td>
 				</tr>
 				<tr>
 					<td>2001-01-01</td>
 					<td>51</td>
 					<td>GREATER THAN ANY TEST 3 (false)</td>
+					<td>33</td>
 				</tr>
 				<tr>
 					<td>2001-01-01</td>
 					<td>51</td>
 					<td>GREATER THAN ANY TEST 4 (false)</td>
+					<td>71</td>
 				</tr>
 				<tr>
 					<td>2001-01-01</td>
 					<td>51</td>
 					<td>GREATER THAN ANY TEST 5 (false)</td>
+					<td>12</td>
 				</tr>
 				<tr>
 					<td>2001-01-01</td>
 					<td>51</td>
 					<td>GREATER THAN ANY TEST 6 (false)</td>
+					<td>95</td>
 				</tr>
 				<tr>
 					<td>2001-01-01</td>
 					<td>51</td>
 					<td>GREATER THAN ANY TEST 6 (false)</td>
+					<td>46</td>
 				</tr>
 				<tr>
 					<td>2001-01-01</td>
 					<td>51</td>
 					<td>GREATER THAN ALL TEST 1 (false)</td>
+					<td>58</td>
 				</tr>
 				<tr>
 					<td>2001-01-01</td>
 					<td>51</td>
 					<td>GREATER THAN ANY TEST 1 (true)</td>
+					<td>24</td>
 				</tr>
 				<tr>
 					<td>2001-01-01</td>
 					<td>51</td>
 					<td>GREATER THAN ANY TEST 2 (true)</td>
+					<td>79</td>
 				</tr>
 				<tr>
 					<td>2001-01-01</td>
 					<td>51</td>
 					<td>GREATER THAN ANY TEST 3 (true)</td>
+					<td>36</td>
 				</tr>
 			</tbody>
 		</table>
