--- a/index.html
+++ b/index.html
@@ -220,6 +220,12 @@
 					<td>GREATER THAN ANY TEST 3 (true)</td>
 					<td>36</td>
 				</tr>
+				<tr>
+					<td>2025-10-31</td>
+					<td>51</td>
+					<td>DATE AFTER TEST</td>
+					<td>36</td>
+				</tr>
 			</tbody>
 		</table>
 	</body>
