--- a/index.html
+++ b/index.html
@@ -232,6 +232,12 @@
 					<td>DATE AFTER TEST2</td>
 					<td>36</td>
 				</tr>
+				<tr>
+					<td>2025-11-01</td>
+					<td>51</td>
+					<td>DATE AFTER TEST2</td>
+					<td>36</td>
+				</tr>
 			</tbody>
 		</table>
 	</body>
