--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 					<th>Number</th>
 					<th>Text</th>
 					<th>Quantity</th>
+					<th>Price</th>
 				</tr>
 			</thead>
 			<tbody>
@@ -21,222 +22,259 @@
 					<td>42</td>
 					<td>First entry</td>
 					<td>73</td>
+					<td>14.99</td>
 				</tr>
 				<tr>
 					<td>2025-02-20</td>
 					<td>137</td>
 					<td>Second entry</td>
 					<td>28</td>
+					<td>29.99</td>
 				</tr>
 				<tr>
 					<td>2025-03-10</td>
 					<td>999</td>
 					<td>Third entry</td>
 					<td>91</td>
+					<td>49.99</td>
 				</tr>
 				<tr>
 					<td>2025-03-11</td>
 					<td>123</td>
 					<td>Fourth entry</td>
 					<td>45</td>
+					<td>19.99</td>
 				</tr>
 				<tr>
 					<td>2025-03-12</td>
 					<td>456</td>
 					<td>Fifth entry</td>
 					<td>62</td>
+					<td>34.99</td>
 				</tr>
 				<tr>
 					<td>2001-01-01</td>
 					<td>999</td>
 					<td>Sixth entry</td>
 					<td>17</td>
+					<td>79.99</td>
 				</tr>
 				<tr>
 					<td>2001-01-01</td>
 					<td>888</td>
 					<td>Seventh entry</td>
 					<td>84</td>
+					<td>24.99</td>
 				</tr>
 				<tr>
 					<td>2001-01-01</td>
 					<td>777</td>
 					<td>Eighth entry</td>
 					<td>56</td>
+					<td>59.99</td>
 				</tr>
 				<tr>
 					<td>2001-01-01</td>
 					<td>10</td>
 					<td>Greater Than Test 1</td>
 					<td>39</td>
+					<td>12.99</td>
 				</tr>
 				<tr>
 					<td>2001-01-01</td>
 					<td>9</td>
 					<td>Greater Than Test 2 (false, number)</td>
 					<td>22</td>
+					<td>8.99</td>
 				</tr>
 				<tr>
 					<td>2001-01-01</td>
 					<td>10</td>
 					<td>Greater Than Test 3 (false, other type)</td>
 					<td>67</td>
+					<td>15.99</td>
 				</tr>
 				<tr>
 					<td>2001-01-01</td>
 					<td>10</td>
 					<td>Greater Than Test 4 (false, NaN)</td>
 					<td>88</td>
+					<td>22.99</td>
 				</tr>
 				<tr>
 					<td>2001-01-01</td>
 					<td>11</td>
 					<td>Greater Than Test 5 (false, NaN)</td>
 					<td>14</td>
+					<td>6.99</td>
 				</tr>
 				<tr>
 					<td>2001-01-01</td>
 					<td>12</td>
 					<td>Greater Than Test 6 (false, NaN)</td>
 					<td>53</td>
+					<td>39.99</td>
 				</tr>
 				<tr>
 					<td>2001-01-01</td>
 					<td>13</td>
 					<td>Greater Than Test 7 (true)</td>
 					<td>31</td>
+					<td>18.99</td>
 				</tr>
 				<tr>
 					<td>2001-01-01</td>
 					<td>16</td>
 					<td>Greater Than Test A (true)</td>
 					<td>76</td>
+					<td>44.99</td>
 				</tr>
 				<tr>
 					<td>2001-01-01</td>
 					<td>15</td>
 					<td>Greater Than Test B (false)</td>
 					<td>42</td>
+					<td>27.99</td>
 				</tr>
 				<tr>
 					<td>2001-01-01</td>
 					<td>16</td>
 					<td>Greater Than Test B (false, NaN)</td>
 					<td>19</td>
+					<td>9.99</td>
 				</tr>
 				<tr>
 					<td>2001-01-01</td>
 					<td>9</td>
 					<td>Less Than Test A (true)</td>
 					<td>65</td>
+					<td>31.99</td>
 				</tr>
 				<tr>
 					<td>2001-01-01</td>
 					<td>8</td>
 					<td>Less Than Test A2 (true)</td>
 					<td>94</td>
+					<td>52.99</td>
 				</tr>
 				<tr>
 					<td>2001-01-01</td>
 					<td>8</td>
 					<td>Less Than Test A2 (true)</td>
 					<td>37</td>
+					<td>16.99</td>
 				</tr>
 				<tr>
 					<td>2001-01-01</td>
 					<td>25</td>
 					<td>GREATER THAN Test A2 (true)</td>
 					<td>81</td>
+					<td>64.99</td>
 				</tr>
 				<tr>
 					<td>2001-01-01</td>
 					<td>26</td>
 					<td>GREATER THAN Test 2 (true)</td>
 					<td>48</td>
+					<td>33.99</td>
 				</tr>
 				<tr>
 					<td>2001-01-01</td>
 					<td>51</td>
 					<td>GREATER THAN ANY TEST 1 (true)</td>
 					<td>27</td>
+					<td>11.99</td>
 				</tr>
 				<tr>
 					<td>2001-01-01</td>
 					<td>51</td>
 					<td>GREATER THAN ANY TEST 2 (true)</td>
 					<td>59</td>
+					<td>41.99</td>
 				</tr>
 				<tr>
 					<td>2001-01-01</td>
 					<td>51</td>
 					<td>GREATER THAN ANY TEST 3 (false)</td>
 					<td>33</td>
+					<td>17.99</td>
 				</tr>
 				<tr>
 					<td>2001-01-01</td>
 					<td>51</td>
 					<td>GREATER THAN ANY TEST 4 (false)</td>
 					<td>71</td>
+					<td>46.99</td>
 				</tr>
 				<tr>
 					<td>2001-01-01</td>
 					<td>51</td>
 					<td>GREATER THAN ANY TEST 5 (false)</td>
 					<td>12</td>
+					<td>5.99</td>
 				</tr>
 				<tr>
 					<td>2001-01-01</td>
 					<td>51</td>
 					<td>GREATER THAN ANY TEST 6 (false)</td>
 					<td>95</td>
+					<td>69.99</td>
 				</tr>
 				<tr>
 					<td>2001-01-01</td>
 					<td>51</td>
 					<td>GREATER THAN ANY TEST 6 (false)</td>
 					<td>46</td>
+					<td>28.99</td>
 				</tr>
 				<tr>
 					<td>2001-01-01</td>
 					<td>51</td>
 					<td>GREATER THAN ALL TEST 1 (false)</td>
 					<td>58</td>
+					<td>37.99</td>
 				</tr>
 				<tr>
 					<td>2001-01-01</td>
 					<td>51</td>
 					<td>GREATER THAN ANY TEST 1 (true)</td>
 					<td>24</td>
+					<td>10.99</td>
 				</tr>
 				<tr>
 					<td>2001-01-01</td>
 					<td>51</td>
 					<td>GREATER THAN ANY TEST 2 (true)</td>
 					<td>79</td>
+					<td>54.99</td>
 				</tr>
 				<tr>
 					<td>2001-01-01</td>
 					<td>51</td>
 					<td>GREATER THAN ANY TEST 3 (true)</td>
 					<td>36</td>
+					<td>21.99</td>
 				</tr>
 				<tr>
 					<td>2025-10-31</td>
 					<td>51</td>
 					<td>DATE AFTER TEST</td>
 					<td>36</td>
+					<td>88.99</td>
 				</tr>
 				<tr>
 					<td>2025-11-01</td>
 					<td>51</td>
 					<td>DATE AFTER TEST2</td>
 					<td>36</td>
+					<td>92.99</td>
 				</tr>
 				<tr>
 					<td>2025-11-01</td>
 					<td>51</td>
 					<td>DATE AFTER TEST2</td>
 					<td>36</td>
+					<td>76.99</td>
 				</tr>
 			</tbody>
 		</table>
