--- a/index.html
+++ b/index.html
@@ -276,6 +276,13 @@
 					<td>36</td>
 					<td>76.99</td>
 				</tr>
+				<tr>
+					<td>2025-11-01</td>
+					<td>51</td>
+					<td>PRICE LESS THAN TEST 1</td>
+					<td>36</td>
+					<td>2.45</td>
+				</tr>
 			</tbody>
 		</table>
 	</body>
