--- a/index.html
+++ b/index.html
@@ -283,6 +283,13 @@
 					<td>36</td>
 					<td>2.45</td>
 				</tr>
+				<tr>
+					<td>2025-11-01</td>
+					<td>51</td>
+					<td>PRICE LESS THAN TEST 2</td>
+					<td>36</td>
+					<td>500</td>
+				</tr>
 			</tbody>
 		</table>
 	</body>
