--- a/index.html
+++ b/index.html
@@ -290,6 +290,20 @@
 					<td>36</td>
 					<td>500</td>
 				</tr>
+				<tr>
+					<td>2025-11-02</td>
+					<td>94</td>
+					<td>SHOULD WORK</td>
+					<td>36</td>
+					<td>501</td>
+				</tr>
+				<tr>
+					<td>2025-11-03</td>
+					<td>91</td>
+					<td>SHOULDN'T WORK</td>
+					<td>36</td>
+					<td>501</td>
+				</tr>
 			</tbody>
 		</table>
 	</body>
