--- a/index.html
+++ b/index.html
@@ -304,6 +304,13 @@
 					<td>36</td>
 					<td>501</td>
 				</tr>
+				<tr>
+					<td>2025-11-05</td>
+					<td>1</td>
+					<td>SHOULD WORK</td>
+					<td>36</td>
+					<td>501</td>
+				</tr>
 			</tbody>
 		</table>
 	</body>
