--- a/index.html
+++ b/index.html
@@ -311,6 +311,20 @@
 					<td>36</td>
 					<td>501</td>
 				</tr>
+				<tr>
+					<td>2025-11-07</td>
+					<td>1</td>
+					<td>SHOULD WORK</td>
+					<td>36</td>
+					<td>501</td>
+				</tr>
+				<tr>
+					<td>2025-11-07</td>
+					<td>155</td>
+					<td>SHOULD WORK</td>
+					<td>36</td>
+					<td>501</td>
+				</tr>
 			</tbody>
 		</table>
 	</body>
