--- a/index.html
+++ b/index.html
@@ -325,6 +325,13 @@
 					<td>36</td>
 					<td>501</td>
 				</tr>
+				<tr>
+					<td>2025-11-08</td>
+					<td>152</td>
+					<td>SHOULD ALSO WORK</td>
+					<td>36</td>
+					<td>511</td>
+				</tr>
 			</tbody>
 		</table>
 	</body>
