--- a/index.html
+++ b/index.html
@@ -40,6 +40,18 @@
 					<td>20</td>
 					<td>18.99</td>
 				</tr>
+				<tr>
+					<td id="today-date">2024-12-04</td>
+					<td>SHOULD SUCCEED</td>
+					<td>20</td>
+					<td>18.99</td>
+				</tr>
+				<tr>
+					<td id="today-date">2024-12-01</td>
+					<td>SHOULD FAIL</td>
+					<td>20</td>
+					<td>18.99</td>
+				</tr>
 
 			</tbody>
 		</table>
