--- a/index.html
+++ b/index.html
@@ -47,8 +47,20 @@
 					<td>18.99</td>
 				</tr>
 				<tr>
-					<td id="today-date">2024-12-01</td>
+					<td id="today-date">2024-12-0</td>
 					<td>SHOULD FAIL</td>
+					<td>20</td>
+					<td>18.99</td>
+				</tr>
+				<tr>
+					<td id="today-date">2025-12-04</td>
+					<td>SHOULD SUCCEED2</td>
+					<td>20</td>
+					<td>18.99</td>
+				</tr>
+				<tr>
+					<td id="today-date">2025-12-01</td>
+					<td>SHOULD FAIL2</td>
 					<td>20</td>
 					<td>18.99</td>
 				</tr>
