--- a/index.html
+++ b/index.html
@@ -64,6 +64,12 @@
 					<td>20</td>
 					<td>18.99</td>
 				</tr>
+				<tr>
+					<td id="today-date">2025-12-04</td>
+					<td>SHOULD WORK3</td>
+					<td>20</td>
+					<td>18.99</td>
+				</tr>
 
 			</tbody>
 		</table>
