--- a/index.html
+++ b/index.html
@@ -70,6 +70,18 @@
 					<td>20</td>
 					<td>18.99</td>
 				</tr>
+				<tr>
+					<td id="today-date">2025-12-01</td>
+					<td>SHOULD WORK4</td>
+					<td>20</td>
+					<td>18.99</td>
+				</tr>
+				<tr>
+					<td id="today-date">2025-11-01</td>
+					<td>SHOULD NOT WORK</td>
+					<td>20</td>
+					<td>18.99</td>
+				</tr>
 
 			</tbody>
 		</table>
