--- a/index.html
+++ b/index.html
@@ -82,6 +82,12 @@
 					<td>20</td>
 					<td>18.99</td>
 				</tr>
+				<tr>
+					<td id="today-date">2025-11-01</td>
+					<td>test update</td>
+					<td>20</td>
+					<td>18.99</td>
+				</tr>
 
 			</tbody>
 		</table>
