--- a/index.html
+++ b/index.html
@@ -94,6 +94,18 @@
 					<td>20</td>
 					<td>18.99</td>
 				</tr>
+				<tr>
+					<td id="today-date">2025-11-04</td>
+					<td>trigger</td>
+					<td>20</td>
+					<td>18.99</td>
+				</tr>
+				<tr>
+					<td id="today-date">2025-11-01</td>
+					<td>NOT</td>
+					<td>20</td>
+					<td>18.99</td>
+				</tr>
 
 			</tbody>
 		</table>
