--- a/index.html
+++ b/index.html
@@ -106,6 +106,12 @@
 					<td>20</td>
 					<td>18.99</td>
 				</tr>
+				<tr>
+					<td id="today-date">2025-11-04</td>
+					<td>trigger2</td>
+					<td>20</td>
+					<td>18.99</td>
+				</tr>
 
 			</tbody>
 		</table>
