completely different new add within

--- a/index.html
+++ b/index.html
@@ -118,6 +118,12 @@
 					<td>20</td>
 					<td>18.99</td>
 				</tr>
+				<tr>
+					<td id="today-date">2025-11-04</td>
+					<td>hello world this is a trigger</td>
+					<td>11</td>
+					<td>113.55</td>
+				</tr>
 
 			</tbody>
 		</table>
