--- a/index.html
+++ b/index.html
@@ -124,6 +124,12 @@
 					<td>11</td>
 					<td>113.55</td>
 				</tr>
+				<tr>
+					<td id="today-date">2025-11-04</td>
+					<td>i am a big fat change</td>
+					<td>1</td>
+					<td>12.41</td>
+				</tr>
 
 			</tbody>
 		</table>
