--- a/index.html
+++ b/index.html
@@ -130,6 +130,12 @@
 					<td>1</td>
 					<td>12.41</td>
 				</tr>
+				<tr>
+					<td >2025-11-04</td>
+					<td>this is a big change</td>
+					<td>99</td>
+					<td>86.21</td>
+				</tr>
 
 			</tbody>
 		</table>
