--- a/index.html
+++ b/index.html
@@ -136,6 +136,12 @@
 					<td>99</td>
 					<td>86.21</td>
 				</tr>
+				<tr>
+					<td >2025-11-04</td>
+					<td>what i gotta do</td>
+					<td>16</td>
+					<td>81.45</td>
+				</tr>
 
 			</tbody>
 		</table>
