--- a/index.html
+++ b/index.html
@@ -142,6 +142,12 @@
 					<td>16</td>
 					<td>81.45</td>
 				</tr>
+				<tr>
+					<td >2025-11-04</td>
+					<td>this is it</td>
+					<td>58</td>
+					<td>49.22</td>
+				</tr>
 
 			</tbody>
 		</table>
