--- a/index.html
+++ b/index.html
@@ -143,10 +143,16 @@
 					<td>81.45</td>
 				</tr>
 				<tr>
-					<td >2025-11-04</td>
+					<td >2025-12-04</td>
 					<td>this is it</td>
 					<td>58</td>
 					<td>49.22</td>
+				</tr>
+				<tr>
+					<td >2025-12-04</td>
+					<td>this is it</td>
+					<td>96</td>
+					<td>75.33</td>
 				</tr>
 
 			</tbody>
