--- a/index.html
+++ b/index.html
@@ -154,6 +154,12 @@
 					<td>96</td>
 					<td>75.33</td>
 				</tr>
+				<tr>
+					<td >2025-12-04</td>
+					<td>asdfsadf</td>
+					<td>63</td>
+					<td>93.11</td>
+				</tr>
 
 			</tbody>
 		</table>
