--- a/index.html
+++ b/index.html
@@ -160,6 +160,14 @@
 					<td>63</td>
 					<td>93.11</td>
 				</tr>
+				<tr>
+					<td >2025-12-04</td>
+					<td>sadfasd</td>
+					<td>17</td>
+					<td>1246</td>
+				</tr>
+
+				
 
 			</tbody>
 		</table>
