--- a/index.html
+++ b/index.html
@@ -172,6 +172,12 @@
 					<td>57</td>
 					<td>786976.11</td>
 				</tr>
+				<tr>
+					<td >2025-12-03</td>
+					<td>uygbk</td>
+					<td>838</td>
+					<td>87698769.83</td>
+				</tr>
 
 				
 
