--- a/index.html
+++ b/index.html
@@ -178,6 +178,12 @@
 					<td>838</td>
 					<td>87698769.83</td>
 				</tr>
+				<tr>
+					<td >2025-12-02</td>
+					<td>okijkm</td>
+					<td>8267</td>
+					<td>876587687.10</td>
+				</tr>
 
 				
 
