--- a/index.html
+++ b/index.html
@@ -190,6 +190,12 @@
 					<td>876876</td>
 					<td>5346543.10</td>
 				</tr>
+				<tr>
+					<td >2025-12-05</td>
+					<td>TODAY'S THE GREATEST</td>
+					<td>8769876</td>
+					<td>1.9</td>
+				</tr>
 
 				
 
