--- a/index.html
+++ b/index.html
@@ -20,37 +20,37 @@
 					<td>2024-06-10</td>
 					<td>Updated entry one</td>
 					<td>50</td>
-					<td>25.50</td>
+					<td>99.99</td>
 				</tr>
 				<tr>
 					<td id="recent-date">2024-12-19</td>
 					<td>Recent entry</td>
 					<td>30</td>
-					<td>15.75</td>
+					<td>99.99</td>
 				</tr>
 				<tr>
 					<td id="older-date">2024-06-08</td>
 					<td>Older entry</td>
 					<td>75</td>
-					<td>42.00</td>
+					<td>99.99</td>
 				</tr>
 				<tr>
-					<td id="today-date">2024-12-04</td>
-					<td>Today's entry</td>
-					<td>20</td>
-					<td>18.99</td>
+					<td>2025-12-23</td>
+					<td>New Product Alpha</td>
+					<td>100</td>
+					<td>49.99</td>
 				</tr>
 				<tr>
-					<td id="today-date">2024-12-04</td>
-					<td>SHOULD SUCCEED</td>
-					<td>20</td>
-					<td>18.99</td>
+					<td>2025-12-22</td>
+					<td>New Product Beta</td>
+					<td>75</td>
+					<td>89.50</td>
 				</tr>
 				<tr>
-					<td id="today-date">2024-12-0</td>
-					<td>SHOULD FAIL</td>
-					<td>20</td>
-					<td>18.99</td>
+					<td>2025-12-21</td>
+					<td>New Product Gamma</td>
+					<td>50</td>
+					<td>129.99</td>
 				</tr>
 				<tr>
 					<td id="today-date">2025-12-04</td>
@@ -76,129 +76,6 @@
 					<td>20</td>
 					<td>18.99</td>
 				</tr>
-				<tr>
-					<td id="today-date">2025-11-01</td>
-					<td>SHOULD NOT WORK</td>
-					<td>20</td>
-					<td>18.99</td>
-				</tr>
-				<tr>
-					<td id="today-date">2025-11-01</td>
-					<td>test update</td>
-					<td>20</td>
-					<td>18.99</td>
-				</tr>
-				<tr>
-					<td id="today-date">2025-11-01</td>
-					<td>trigger</td>
-					<td>20</td>
-					<td>18.99</td>
-				</tr>
-				<tr>
-					<td id="today-date">2025-11-04</td>
-					<td>trigger</td>
-					<td>20</td>
-					<td>18.99</td>
-				</tr>
-				<tr>
-					<td id="today-date">2025-11-01</td>
-					<td>NOT</td>
-					<td>20</td>
-					<td>18.99</td>
-				</tr>
-				<tr>
-					<td id="today-date">2025-11-04</td>
-					<td>trigger2</td>
-					<td>20</td>
-					<td>18.99</td>
-				</tr>
-				<tr>
-					<td id="today-date">2025-11-04</td>
-					<td>hello world this is a trigger</td>
-					<td>20</td>
-					<td>18.99</td>
-				</tr>
-				<tr>
-					<td id="today-date">2025-11-04</td>
-					<td>hello world this is a trigger</td>
-					<td>11</td>
-					<td>113.55</td>
-				</tr>
-				<tr>
-					<td id="today-date">2025-11-04</td>
-					<td>i am a big fat change</td>
-					<td>1</td>
-					<td>12.41</td>
-				</tr>
-				<tr>
-					<td >2025-11-04</td>
-					<td>this is a big change</td>
-					<td>99</td>
-					<td>86.21</td>
-				</tr>
-				<tr>
-					<td >2025-11-04</td>
-					<td>what i gotta do</td>
-					<td>16</td>
-					<td>81.45</td>
-				</tr>
-				<tr>
-					<td >2025-12-04</td>
-					<td>this is it</td>
-					<td>58</td>
-					<td>49.22</td>
-				</tr>
-				<tr>
-					<td >2025-12-04</td>
-					<td>this is it</td>
-					<td>96</td>
-					<td>75.33</td>
-				</tr>
-				<tr>
-					<td >2025-12-04</td>
-					<td>asdfsadf</td>
-					<td>63</td>
-					<td>93.11</td>
-				</tr>
-				<tr>
-					<td >2025-12-04</td>
-					<td>sadfasd</td>
-					<td>17</td>
-					<td>1246</td>
-				</tr>
-				<tr>
-					<td >2025-12-04</td>
-					<td>jkkkfbb</td>
-					<td>57</td>
-					<td>786976.11</td>
-				</tr>
-				<tr>
-					<td >2025-12-03</td>
-					<td>uygbk</td>
-					<td>838</td>
-					<td>87698769.83</td>
-				</tr>
-				<tr>
-					<td >2025-12-02</td>
-					<td>okijkm</td>
-					<td>8267</td>
-					<td>876587687.10</td>
-				</tr>
-				<tr>
-					<td >2025-12-03</td>
-					<td>sdfsad</td>
-					<td>876876</td>
-					<td>5346543.10</td>
-				</tr>
-				<tr>
-					<td >2025-12-05</td>
-					<td>TODAY'S THE GREATEST</td>
-					<td>8769876</td>
-					<td>1.9</td>
-				</tr>
-
-				
-
 			</tbody>
 		</table>
 		<script>
