--- a/index.html
+++ b/index.html
@@ -20,59 +20,41 @@
 					<td>2024-06-10</td>
 					<td>Updated entry one</td>
 					<td>50</td>
-					<td>99.99</td>
+					<td>999.99</td>
 				</tr>
 				<tr>
 					<td id="recent-date">2024-12-19</td>
 					<td>Recent entry</td>
-					<td>30</td>
+					<td>300</td>
 					<td>99.99</td>
 				</tr>
 				<tr>
 					<td id="older-date">2024-06-08</td>
-					<td>Older entry</td>
+					<td>MODIFIED TEXT</td>
 					<td>75</td>
 					<td>99.99</td>
 				</tr>
 				<tr>
-					<td>2025-12-23</td>
-					<td>New Product Alpha</td>
-					<td>100</td>
-					<td>49.99</td>
+					<td>2026-01-15</td>
+					<td>Laptop Computer</td>
+					<td>5</td>
+					<td>1299.99</td>
 				</tr>
 				<tr>
-					<td>2025-12-22</td>
-					<td>New Product Beta</td>
-					<td>75</td>
-					<td>89.50</td>
+					<td>2026-02-20</td>
+					<td>Wireless Mouse</td>
+					<td>150</td>
+					<td>29.99</td>
 				</tr>
 				<tr>
-					<td>2025-12-21</td>
-					<td>New Product Gamma</td>
-					<td>50</td>
-					<td>129.99</td>
+					<td>2026-03-10</td>
+					<td>USB-C Cable</td>
+					<td>200</td>
+					<td>12.50</td>
 				</tr>
 				<tr>
 					<td id="today-date">2025-12-04</td>
 					<td>SHOULD SUCCEED2</td>
-					<td>20</td>
-					<td>18.99</td>
-				</tr>
-				<tr>
-					<td id="today-date">2025-12-01</td>
-					<td>SHOULD FAIL2</td>
-					<td>20</td>
-					<td>18.99</td>
-				</tr>
-				<tr>
-					<td id="today-date">2025-12-04</td>
-					<td>SHOULD WORK3</td>
-					<td>20</td>
-					<td>18.99</td>
-				</tr>
-				<tr>
-					<td id="today-date">2025-12-01</td>
-					<td>SHOULD WORK4</td>
 					<td>20</td>
 					<td>18.99</td>
 				</tr>
