data change made

--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
 					<td>New York, NY</td>
 				</tr>
 				<tr>
-					<td><a href="data-analyst.html">Data Analyst</a></td>
-					<td>Analytics</td>
-					<td>Austin, TX</td>
+					<td><a href="ux-designer.html">UX Designer</a></td>
+					<td>Design</td>
+					<td>Seattle, WA</td>
 				</tr>
 			</tbody>
 		</table>
