--- a/software-engineer.html
+++ b/software-engineer.html
@@ -45,7 +45,7 @@
 				</tr>
 				<tr>
 					<td>Key Responsibilities</td>
-					<td>Design, develop, and maintain software applications; collaborate with cross-functional teams; participate in code reviews</td>
+					<td>Build and optimize scalable web applications; write clean, maintainable code; mentor junior developers; implement automated testing; debug and resolve technical issues</td>
 				</tr>
 				<tr>
 					<td>Required Skills</td>
