--- a/ux-designer.html
+++ b/ux-designer.html
@@ -3,10 +3,10 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>Data Analyst - Job Description</title>
+		<title>UX Designer - Job Description</title>
 	</head>
 	<body>
-		<h1>Data Analyst</h1>
+		<h1>UX Designer</h1>
 		<table border="1">
 			<thead>
 				<tr>
@@ -17,15 +17,15 @@
 			<tbody>
 				<tr>
 					<td>Job Title</td>
-					<td>Data Analyst</td>
+					<td>UX Designer</td>
 				</tr>
 				<tr>
 					<td>Department</td>
-					<td>Analytics</td>
+					<td>Design</td>
 				</tr>
 				<tr>
 					<td>Location</td>
-					<td>Austin, TX</td>
+					<td>Seattle, WA</td>
 				</tr>
 				<tr>
 					<td>Employment Type</td>
@@ -33,27 +33,27 @@
 				</tr>
 				<tr>
 					<td>Salary Range</td>
-					<td>$80,000 - $120,000</td>
+					<td>$95,000 - $140,000</td>
 				</tr>
 				<tr>
 					<td>Experience Required</td>
-					<td>2-4 years</td>
+					<td>3-5 years</td>
 				</tr>
 				<tr>
 					<td>Education</td>
-					<td>Bachelor's degree in Statistics, Mathematics, Economics, or related field</td>
+					<td>Bachelor's degree in Design, HCI, or related field</td>
 				</tr>
 				<tr>
 					<td>Key Responsibilities</td>
-					<td>Collect and analyze data; create reports and dashboards; identify trends and patterns; present insights to stakeholders</td>
+					<td>Create user-centered designs; conduct user research and testing; develop wireframes and prototypes; collaborate with product and engineering teams; iterate on designs based on feedback</td>
 				</tr>
 				<tr>
 					<td>Required Skills</td>
-					<td>SQL, Excel, Tableau, Python, statistical analysis, data visualization</td>
+					<td>Figma, Sketch, Adobe XD, user research, prototyping, interaction design, usability testing</td>
 				</tr>
 				<tr>
 					<td>Posted Date</td>
-					<td>2026-01-03</td>
+					<td>2026-01-05</td>
 				</tr>
 			</tbody>
 		</table>
