--- a/devops-engineer.html
+++ b/devops-engineer.html
@@ -3,10 +3,10 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>Product Manager - Job Description</title>
+		<title>DevOps Engineer - Job Description</title>
 	</head>
 	<body>
-		<h1>Product Manager</h1>
+		<h1>DevOps Engineer</h1>
 		<table border="1">
 			<thead>
 				<tr>
@@ -17,15 +17,15 @@
 			<tbody>
 				<tr>
 					<td>Job Title</td>
-					<td>Product Manager</td>
+					<td>DevOps Engineer</td>
 				</tr>
 				<tr>
 					<td>Department</td>
-					<td>Product</td>
+					<td>Infrastructure</td>
 				</tr>
 				<tr>
 					<td>Location</td>
-					<td>New York, NY</td>
+					<td>Denver, CO</td>
 				</tr>
 				<tr>
 					<td>Employment Type</td>
@@ -33,27 +33,27 @@
 				</tr>
 				<tr>
 					<td>Salary Range</td>
-					<td>$130,000 - $190,000</td>
+					<td>$110,000 - $160,000</td>
 				</tr>
 				<tr>
 					<td>Experience Required</td>
-					<td>5-7 years</td>
+					<td>4-6 years</td>
 				</tr>
 				<tr>
 					<td>Education</td>
-					<td>Bachelor's degree in Business, Engineering, or related field; MBA preferred</td>
+					<td>Bachelor's degree in Computer Science, Information Technology, or related field</td>
 				</tr>
 				<tr>
 					<td>Key Responsibilities</td>
-					<td>Define product vision and strategy; prioritize features; work with engineering and design teams; analyze market trends</td>
+					<td>Automate deployment pipelines; manage cloud infrastructure; monitor system performance; implement security best practices; troubleshoot production issues; optimize infrastructure costs</td>
 				</tr>
 				<tr>
 					<td>Required Skills</td>
-					<td>Product roadmapping, stakeholder management, data analysis, agile methodologies, user research</td>
+					<td>Docker, Kubernetes, AWS, Terraform, CI/CD, Jenkins, Python, Linux administration, monitoring tools</td>
 				</tr>
 				<tr>
 					<td>Posted Date</td>
-					<td>2026-01-02</td>
+					<td>2026-01-05</td>
 				</tr>
 			</tbody>
 		</table>
