--- a/index.html
+++ b/index.html
@@ -22,14 +22,14 @@
 					<td>San Francisco, CA</td>
 				</tr>
 				<tr>
-					<td><a href="product-manager.html">Product Manager</a></td>
-					<td>Product</td>
-					<td>New York, NY</td>
-				</tr>
-				<tr>
 					<td><a href="ux-designer.html">UX Designer</a></td>
 					<td>Design</td>
 					<td>Seattle, WA</td>
+				</tr>
+				<tr>
+					<td><a href="devops-engineer.html">DevOps Engineer</a></td>
+					<td>Infrastructure</td>
+					<td>Denver, CO</td>
 				</tr>
 			</tbody>
 		</table>
