--- a/ux-designer.html
+++ b/ux-designer.html
@@ -45,7 +45,7 @@
 				</tr>
 				<tr>
 					<td>Key Responsibilities</td>
-					<td>Create user-centered designs; conduct user research and testing; develop wireframes and prototypes; collaborate with product and engineering teams; iterate on designs based on feedback</td>
+					<td>Lead end-to-end design process from research to implementation; establish and maintain design systems; facilitate design workshops; advocate for user needs in product decisions; analyze user behavior metrics to inform design improvements</td>
 				</tr>
 				<tr>
 					<td>Required Skills</td>
