--- a/backend-developer.html
+++ b/backend-developer.html
@@ -3,10 +3,10 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>Software Engineer - Job Description</title>
+		<title>Backend Developer - Job Description</title>
 	</head>
 	<body>
-		<h1>Software Engineer</h1>
+		<h1>Backend Developer</h1>
 		<table border="1">
 			<thead>
 				<tr>
@@ -17,7 +17,7 @@
 			<tbody>
 				<tr>
 					<td>Job Title</td>
-					<td>Software Engineer</td>
+					<td>Backend Developer</td>
 				</tr>
 				<tr>
 					<td>Department</td>
@@ -25,7 +25,7 @@
 				</tr>
 				<tr>
 					<td>Location</td>
-					<td>San Francisco, CA</td>
+					<td>Boston, MA</td>
 				</tr>
 				<tr>
 					<td>Employment Type</td>
@@ -33,27 +33,27 @@
 				</tr>
 				<tr>
 					<td>Salary Range</td>
-					<td>$120,000 - $180,000</td>
+					<td>$125,000 - $175,000</td>
 				</tr>
 				<tr>
 					<td>Experience Required</td>
-					<td>3-5 years</td>
+					<td>4-7 years</td>
 				</tr>
 				<tr>
 					<td>Education</td>
-					<td>Bachelor's degree in Computer Science or related field</td>
+					<td>Bachelor's degree in Computer Science, Software Engineering, or related field</td>
 				</tr>
 				<tr>
 					<td>Key Responsibilities</td>
-					<td>Build and optimize scalable web applications; write clean, maintainable code; mentor junior developers; implement automated testing; debug and resolve technical issues</td>
+					<td>Design and develop RESTful APIs; optimize database queries and schema design; implement microservices architecture; ensure application security and data protection; write comprehensive unit and integration tests; participate in on-call rotations</td>
 				</tr>
 				<tr>
 					<td>Required Skills</td>
-					<td>JavaScript, Python, React, Node.js, Git</td>
+					<td>Java, Spring Boot, PostgreSQL, MongoDB, Redis, Kafka, REST APIs, microservices, system design</td>
 				</tr>
 				<tr>
 					<td>Posted Date</td>
-					<td>2026-01-01</td>
+					<td>2026-01-05</td>
 				</tr>
 			</tbody>
 		</table>
