--- a/devops-engineer.html
+++ b/devops-engineer.html
@@ -45,7 +45,7 @@
 				</tr>
 				<tr>
 					<td>Key Responsibilities</td>
-					<td>Automate deployment pipelines; manage cloud infrastructure; monitor system performance; implement security best practices; troubleshoot production issues; optimize infrastructure costs</td>
+					<td>Design and maintain scalable infrastructure as code; implement continuous integration and delivery workflows; ensure high availability and disaster recovery; collaborate with development teams on containerization strategies; conduct security audits and vulnerability assessments</td>
 				</tr>
 				<tr>
 					<td>Required Skills</td>
