--- a/index.html
+++ b/index.html
@@ -17,11 +17,6 @@
 			</thead>
 			<tbody>
 				<tr>
-					<td><a href="software-engineer.html">Software Engineer</a></td>
-					<td>Engineering</td>
-					<td>San Francisco, CA</td>
-				</tr>
-				<tr>
 					<td><a href="ux-designer.html">UX Designer</a></td>
 					<td>Design</td>
 					<td>Seattle, WA</td>
@@ -30,6 +25,11 @@
 					<td><a href="devops-engineer.html">DevOps Engineer</a></td>
 					<td>Infrastructure</td>
 					<td>Denver, CO</td>
+				</tr>
+				<tr>
+					<td><a href="backend-developer.html">Backend Developer</a></td>
+					<td>Engineering</td>
+					<td>Boston, MA</td>
 				</tr>
 			</tbody>
 		</table>
